name:                cdepgraph
version:             1.2
synopsis:            C(++) dependency graph generator

license:             MIT
license-file:        LICENSE
author:              Ruslan Akbashev
maintainer:          ruslashev@gmail.com

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cdepgraph
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, text >=1.2 && <1.3, containers >=0.5 && <0.6, directory >=1.2 && <1.3, filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
